<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buff"
    tools:context=".PostageCalculator"  >

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_envelope"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/envelope"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radio_letter"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/letter"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radio_package"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/package1"
            android:textSize="15sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/message1"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="48dp"
        android:layout_toRightOf="@+id/editText1"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:onClick="exitApp"
        android:text="@string/b_exit" />

</RelativeLayout>